# simple_db

./: CMakeLists.txt  README.md
data/: users
include/: command_parser.h  file_manager.h  includes.h  table.h
src/: command_parser.cpp  file_manager.cpp  main.cpp  table.cpp
